Restore codeGen IfThenElseTest consistency.
* codeGen/IfThenElseTest.java: Removed labels HashMap